tests/common/snapshots/lzop__common__tests__lzop.rs-62-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 140098
  name: lzop
  confidence: 250
  description: "LZO compressed data, total size: 140098 bytes"
  always_display: false
  extraction_declined: false
