tests/common/snapshots/lzop__common__tests__lzop.rs-62-5_ordered_extractions.snap
---
source: tests/common/mod.rs
expression: ordered_extractions
---
- size: 140098
  success: true
  extractor: lzop_built_in
  do_not_recurse: false
  output_directory: "[output_directory]"
