tests/common/snapshots/lzop__common__tests__lzop.rs-64-5_file_map.snap
---
source: tests/common/mod.rs
assertion_line: 40
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 32234
  name: lzop
  confidence: 250
  description: "LZO compressed data, total size: 32234 bytes"
  always_display: false
  extraction_declined: false
