tests/common/snapshots/lzop__common__tests__lzop.rs-64-5_ordered_extractions.snap
---
source: tests/common/mod.rs
assertion_line: 49
expression: ordered_extractions
---
- size: 32234
  success: true
  extractor: lzop_built_in
  do_not_recurse: false
  output_directory: "[output_directory]"
